--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,5 +14,15 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1"
-  }
+  },
+  "devDependencies": {
+    "chai": "^4.5.0",
+    "mocha": "^11.6.0",
+    "supertest": "^7.1.1"
+  },
+  "scripts": {
+    "start": "SET NODE_ENV=dev && node index.js",
+    "test": "mocha test/*.js"
+  },
+  "type": "commonjs"
 }
