--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "chai": "^4.5.0",
     "mocha": "^11.6.0",
+    "nodemon": "^3.1.10",
     "supertest": "^7.1.1"
   },
   "scripts": {
